After several discussions, settled on a single secured info endpoint that provides version, runtime version, and listening mode. Not thoroughly tested and unknown if correctly gathering runtime version. Also need to update documentation.
