# src/Microsoft.Diagnostics.Monitoring.WebApi/Controllers/DiagController.cs
@@ -11,6 +11,7 @@ using Microsoft.Diagnostics.Monitoring.WebApi.Validation;
 using Microsoft.Diagnostics.NETCore.Client;
 using Microsoft.Extensions.DependencyInjection;
 using Microsoft.Extensions.Logging;
+using Microsoft.Extensions.Options;
 using Microsoft.Net.Http.Headers;
 using System;
 using System.Collections.Generic;
@@ -48,11 +49,13 @@ namespace Microsoft.Diagnostics.Monitoring.WebApi.Controllers
 
         private readonly ILogger<DiagController> _logger;
         private readonly IDiagnosticServices _diagnosticServices;
+        private readonly IDiagnosticPortOptions _diagnosticPortOptions;
 
         public DiagController(ILogger<DiagController> logger, IServiceProvider serviceProvider)
         {
             _logger = logger;
             _diagnosticServices = serviceProvider.GetRequiredService<IDiagnosticServices>();
+            _diagnosticPortOptions = serviceProvider.GetRequiredService<IDiagnosticPortOptions>();
         }
 
         /// <summary>
@@ -522,20 +525,45 @@ namespace Microsoft.Diagnostics.Monitoring.WebApi.Controllers
         }
 
         /// <summary>
-        /// Gets information about Dotnet-Monitor that should be secured behind authentication (currently a stub).
+        /// Gets versioning and listening mode information about Dotnet-Monitor 
         /// </summary>
-        [HttpGet("secureinfo", Name = nameof(GetSecureInfo))]
+        [HttpGet("info", Name = nameof(GetInfo))]
         [ProducesWithProblemDetails(ContentTypes.ApplicationJson)]
-        [ProducesResponseType(typeof(Models.DotnetMonitorSecureInfo), StatusCodes.Status200OK)]
-        public ActionResult<Models.DotnetMonitorSecureInfo> GetSecureInfo()
+        [ProducesResponseType(typeof(Models.DotnetMonitorInfo), StatusCodes.Status200OK)]
+        public ActionResult<Models.DotnetMonitorInfo> GetInfo()
         {
             return this.InvokeService(() =>
             {
-                Models.DotnetMonitorSecureInfo dotnetMonitorSecureInfo = new Models.DotnetMonitorSecureInfo();
-                
+                string version = GetDotnetMonitorVersion();
+                string runtimeVersion = Environment.Version.ToString();
+                string listeningMode = _diagnosticPortOptions.GetReadableConnectionMode();
+
+                Models.DotnetMonitorInfo dotnetMonitorInfo = new Models.DotnetMonitorInfo()
+                {
+                    Version = version,
+                    RuntimeVersion = runtimeVersion,
+                    ListeningMode = listeningMode
+                };
+
                 _logger.WrittenToHttpStream();
-                return new ActionResult<Models.DotnetMonitorSecureInfo>(dotnetMonitorSecureInfo);
+                return new ActionResult<Models.DotnetMonitorInfo>(dotnetMonitorInfo);
             }, _logger);
+        }
+
+        private static string GetDotnetMonitorVersion()
+        {
+            var assembly = Assembly.GetEntryAssembly() ?? Assembly.GetExecutingAssembly();
+
+            var assemblyVersionAttribute = assembly.GetCustomAttribute<AssemblyInformationalVersionAttribute>();
+
+            if (assemblyVersionAttribute is null)
+            {
+                return assembly.GetName().Version.ToString();
+            }
+            else
+            {
+                return assemblyVersionAttribute.InformationalVersion;
+            }
         }
 
         private ActionResult StartTrace(
@@ -588,7 +616,7 @@ namespace Microsoft.Diagnostics.Monitoring.WebApi.Controllers
 
             string fileName = FormattableString.Invariant($"{GetFileNameTimeStampUtcNow()}_{processInfo.EndpointInfo.ProcessId}.txt");
             string contentType = ContentTypes.TextEventStream;
-            
+
             if (format == LogFormat.EventStream)
             {
                 contentType = ContentTypes.TextEventStream;
