# src/Microsoft.Diagnostics.Monitoring.WebApi/Models/DotnetMonitorSecureInfo.cs
@@ -1,15 +1,0 @@
-﻿// Licensed to the .NET Foundation under one or more agreements.
-// The .NET Foundation licenses this file to you under the MIT license.
-// See the LICENSE file in the project root for more information.
-
-#if UNITTEST
-namespace Microsoft.Diagnostics.Monitoring.UnitTests.Models
-#else
-namespace Microsoft.Diagnostics.Monitoring.WebApi.Models
-#endif
-{
-    public class DotnetMonitorSecureInfo
-    {
-        // This is currently a stub that will be expanded in the future with additional configuration info.
-    }
-}
